# fastapi-microservices

./: README.md  docker-compose.override.yml  docker-compose.yml  kubernetes.yml
chat-app/: chat.html
hello-service/: Dockerfile  pyproject.toml
hello-service/hello_service/: main.py
http-gateway/: Dockerfile  pyproject.toml
http-gateway/http_gateway/: main.py
rabbitmq/: README.md
uml/: architecture-overview.puml  authentication-flow.puml
ws-gateway/: Dockerfile  pyproject.toml
ws-gateway/ws_gateway/: main.py
