[tool.poetry]
name = "ws-gateway"
version = "0.1.0"
description = ""
authors = ["Vyacheslav Krachkov <v.krachkov@enestech.net>"]
readme = "README.md"
packages = [{include = "ws_gateway"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
websockets = "^10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
